--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "blueimp-md5": "^2.18.0",
     "echarts": "^4.9.0",
     "element-ui": "^2.14.0",
     "vue": "^2.5.2",
